# tuktuk-fanout

./: Anchor.toml  Cargo.toml  Procfile  README.md  next.config.js  package.json  tsconfig.json
.cursor/rules/: anchor-structure.mdc  anchor-ui.mdc
.github/workflows/: tests.yaml
programs/wallet-fanout/: Cargo.toml
programs/wallet-fanout/src/: errors.rs  lib.rs  state.rs
programs/wallet-fanout/src/instructions/: claim_v0.rs  close_fanout_v0.rs  close_token_inflow_v0.rs  close_voucher_v0.rs  close_wallet_share_v0.rs  init_voucher_v0.rs  initialize_fanout_v0.rs  initialize_global_state_v0.rs  initialize_voucher_v0.rs  mod.rs  requeue_fanout_task_v0.rs  update_wallet_share_v0.rs
tests/: wallet-fanout.ts
